css/style.css
html, body {
  max-width: 100%;
  overflow-x: hidden;
}

img.bg {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;
  
  /* Set up proportionate scaling */
  width: 100%;
  height: auto;
  
  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
  z-index: -10;
}

img {
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

img[data-src] {
	opacity: 0;
}

.intro {
  padding-top: 50px;
  padding-left: 50px;
  color: white;
  text-shadow: 2px 2px 2px #90a4ae;
  height: 100vh;
}

.aboutMe {
  height: 100vh;
}

.aboutMeText {
  margin-top: 75px;
  margin-left: 25px !important;
}

.contactMe {
  height: 100vh;
}

.contactOptions {
  margin-top: 75px;
  margin-left: 50px;
  width: 200px;
}

.title {
  padding-left: 30px;
  margin-top: -10px;
}

.downArrow {
  position: absolute;
  width: 100%;
  text-align: center;
  margin: 0 auto;
  left: 0;
  bottom: 0;
  text-shadow: none;
  transition: all 1s;  
}

.upArrowed {
  transform: rotate(180deg);
}

#portfolioContainer {
  width: 89%;
  margin: 0 auto;
}

.picture {
  margin-top: 120px;
}

#portfolio {
  margin-bottom: 30px;
}

#contact {
  margin-left: 45px;
}

.personal-title {
  color: white;
  text-shadow: 2px 2px 2px #90a4ae;  
  font-style: italic;
  padding-top: 35px;
  font-size: 42px;
  padding-left: 30px;
}

.personal {
  font-weight: 400;
  font-size: 1.15rem;
  letter-spacing: 0.25px;
}

.contact-link {
  border: 1px solid transparent !important;
  background-color: #78909c !important;
  padding: 15px !important;
  font-size: 1.05rem;  
}

a:hover {
  background-color: #b0bec5 !important;
}

.email-link {
  color: white;
  font-style: italic;
}

.fixed-action-btn {
  top: 20px; 
  right: 20px;
}

.clicked {
  -webkit-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
          transform: rotate(90deg);
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.unclicked {
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.tooltipped {
  padding: 0 10px 0 10px;
}

.fixed-action-btn.horizontal > ul > li {
  margin-top: 10px !important;
}

@media only screen and (max-width: 400px) {

  .title {
    padding-top: 15px;
  }
  .contactOptions {
    margin-top: 10px;
  }
  .picture {
    margin-top: 40px;
  }
}
@media only screen and (min-width: 400px) and (max-width: 600px) {
	.name {
    padding-left: 40px;
    width: 200px;
  }
  .title {
    padding-left: 70px;
    padding-top: 45px;
  }

  .contactOptions {
    margin-top: 10px;
  }

  .picture {
    margin-top: 40px;
  }
  .contactMe {
    height: 90vh;
  }
}

#hamburger {
  width: 25px;
  height: 12px;
  position: relative;
  margin: auto;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
      transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}

#hamburger span {
  display: block;
  position: absolute;
  height: 2px;
  width: 100%;
  background: white;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
      transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

#hamburger span:nth-child(1) {
  top: 21px;
}

#hamburger span:nth-child(2),#hamburger span:nth-child(3) {
  top: 27px;
}

#hamburger span:nth-child(4) {
  top: 33px;
}

#hamburger.open span {
  height: 3px;
}

#hamburger.open span:nth-child(1) {
  top: 27px;
  width: 0%;
  left: 50%;
}

#hamburger.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
      transform: rotate(45deg);
}

#hamburger.open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
      transform: rotate(-45deg);
}

#hamburger.open span:nth-child(4) {
  top: 27px;
  width: 0%;
  left: 50%;
}

